fix: use truncate tippy & k8s resource css grid

--- a/src/components/ClusterNodes/clusterNodes.scss
+++ b/src/components/ClusterNodes/clusterNodes.scss
@@ -67,18 +67,25 @@
     .setting-icon path {
         stroke: var(--N600);
     }
+
     .node-list-row {
         display: grid;
-        grid-template-columns: 260px 180px repeat(10, 120px);
         column-gap: 16px;
-    }
-    .node-list-row > :first-child {
-        position: sticky;
-        left: 0;
-        z-index: 1;
-        padding-left: 20px;
-        background-color: var(--N0);
-        border-right: 1px solid var(--N200);
+        z-index: 5;
+        width: max-content;
+
+        & > :first-child {
+            position: sticky;
+            left: 0;
+            z-index: 1;
+            padding-left: 20px;
+            background-color: var(--N0);
+            border-right: 1px solid var(--N200);
+        }
+
+        & > :last-child {
+            padding-right: 20px;
+        }
     }
 
     .node-actions-menu-icon {
