--- a/src/components/ResourceBrowser/ResourceBrowser.scss
+++ b/src/components/ResourceBrowser/ResourceBrowser.scss
@@ -132,11 +132,22 @@
                 &.paginated-list-view-with-sync-error {
                     height: calc(100vh - 233px);
                 }
-                .list-header {
+                &__row {
                     width: max-content;
-                    min-width: calc(100vw - 277px);
-                    top: 0;
-                    z-index: 3;
+                    display: grid;
+
+                    & > :first-child {
+                        position: sticky;
+                        left: 0;
+                        z-index: 1;
+                        background-color: var(--N0);
+                        border-right: 1px solid var(--N200);
+                        padding-left: 20px;
+                    }
+
+                    & > :last-child {
+                        padding-right: 20px;
+                    }
                 }
             }
 
